--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,39 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	/*//JUnit4 추가
+	testImplementation("org.junit.vintage:junit-vintage-engine") {
+		exclude group: "org.hamcrest", module: "hamcrest-core"
+	}*/
+
+	// Querydsl
+	implementation 'com.querydsl:querydsl-jpa:5.0.0'
+
+	// Querydsl JPAAnnotationProcessor 사용 지정
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jpa"
+	// java.lang.NoClassDefFoundError(javax.annotation.Entity) 발생 대응
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	// java.lang.NoClassDefFoundError(javax.annotation.Generated) 발생 대응
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+
+	// clean task 실행시 QClass 삭제
+	clean {
+		delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성 위치
+	}
+
+	/*// query dsl
+	def queryDSL = '5.0.0'
+	compile("com.querydsl:querydsl-jpa:${queryDSL}")
+	compile("com.querydsl:querydsl-apt:${queryDSL}:jpa")
+	annotationProcessor("com.querydsl:querydsl-apt:${queryDSL}:jpa")
+	annotationProcessor("org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final")
+	annotationProcessor("javax.annotation:javax.annotation-api:1.3.2")*/
 }
 
-tasks.named('test') {
+
+/*test {
 	useJUnitPlatform()
-}
+}*/
 
 compileJava.options.encoding = 'UTF-8'
 
